--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,1 +1,5 @@
-.site-footer{padding:1rem 0;background:transparent;border-top:1px solid rgba(0,0,0,.04)}
+.site-footer{
+    padding:1rem 0;
+    background:#eaeaea;
+    border-top:1px solid rgba(0,0,0,.04)
+}
