--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,11 @@
 $bg: #f7f7fb;
 $text: #1f2937;
 $accent: #0b75ff;
+
+/* Font stacks */
+$font-body: 'Nunito Sans', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+$font-heading: 'Oswald', 'Nunito Sans', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+
+$primary: #0b75ff;
+$secondary: #0b75ff;
+
